Updated .gitignore for Python metadata.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
-# Byte-compiled files
+# Python-related metadata
 __pycache__
+.egg-info/
+.ipynb_checkpoints
+.pytest_cache
 
 # Virtual Environment
 venv/
 .env/
 .Python
 
-# Logs and Debug Files
+# Logs and debug files
 *.log
 *.txt
 *.out
